Agora no Netbeans

--- a/app/views/itens/index.html.erb
+++ b/app/views/itens/index.html.erb
@@ -1,7 +1,47 @@
-<% form_tag itens_path, :html => { :method => :post } do %>
-  <%= hidden_field_tag :produto_id, produto.id %>
-  <p>
-     <%= text_field_tag :quantidade, 1 %>
-     <%= submit_tag 'Adicionar ao carrinho' %>
- </p>
-<% end %>
+<thead>
+    <tr>
+        <th>
+            Produto
+        </th>
+        <th>
+            Quantidade
+        </th>
+        <th>
+            Preço Unitário
+        </th>
+        <th>
+            Preço Total
+        </th>
+    </tr>
+</thead>
+<tbody>
+    <% pedido_atual.itens.each do |item| %>
+    <tr>
+        <td>
+            <%= item.produto.nome %>
+        </td>
+        <td>
+            <%= item.quantidade %>
+        </td>
+        <td>
+            <%= number_to_currency item.produto.preco %>
+        </td>
+        <td>
+            <%= number_to_currency item.preco_total %>
+        </td>
+    </tr>
+    <% end %>
+</tbody>
+<tfoot>
+    <tr>
+        <td colspan="2">
+        </td>
+        <td>
+            Preço Total 
+        </td>
+        <td>
+            <%= number_to_currency
+            pedido_atual.preco_total %>
+        </td>
+    </tr>
+</tfoot>
