--- a/app/views/itens/index.html.erb
+++ b/app/views/itens/index.html.erb
@@ -1,47 +1,48 @@
-<thead>
+<table>
+  <thead>
     <tr>
-        <th>
-            Produto
-        </th>
-        <th>
-            Quantidade
-        </th>
-        <th>
-            Preço Unitário
-        </th>
-        <th>
-            Preço Total
-        </th>
+      <th>
+        Produto
+      </th>
+      <th>
+        Quantidade
+      </th>
+      <th>
+        Preço Unitário
+      </th>
+      <th>
+        Preço Total
+      </th>
     </tr>
-</thead>
-<tbody>
+  </thead>
+  <tbody>
     <% pedido_atual.itens.each do |item| %>
-    <tr>
+      <tr>
         <td>
-            <%= item.produto.nome %>
+          <%= item.produto.nome %>
         </td>
         <td>
-            <%= item.quantidade %>
+          <%= item.quantidade %>
         </td>
         <td>
-            <%= number_to_currency item.produto.preco %>
+          <%= number_to_currency item.produto.preco %>
         </td>
         <td>
-            <%= number_to_currency item.preco_total %>
+          <%= number_to_currency item.preco_total %>
         </td>
-    </tr>
+      </tr>
     <% end %>
-</tbody>
-<tfoot>
+  </tbody>
+  <tfoot>
     <tr>
-        <td colspan="2">
-        </td>
-        <td>
-            Preço Total 
-        </td>
-        <td>
-            <%= number_to_currency
-            pedido_atual.preco_total %>
-        </td>
+      <td colspan="2">
+      </td>
+      <td>
+        Preço Total
+      </td>
+      <td>
+        <%= number_to_currency pedido_atual.preco_total %>
+      </td>
     </tr>
-</tfoot>
+  </tfoot>
+</table>
