--- a/app/views/layouts/administracao.html.erb
+++ b/app/views/layouts/administracao.html.erb
@@ -1,13 +1,23 @@
 <html>
   <head>
     <title><%= titulo %></title>
+
+    <%= stylesheet_link_tag "erros" %>
+    <%= yield :stylesheets %>
+
   </head>
   <body>
+
     <h1><%= titulo %></h1>
+
     <h3><%= yield :cabecalho %></h3>
+
     <%= render_flash %>
     <%= render 'compartilhados/flash' %>
+
     <%= yield %>
+
     <%= debug(params) if Rails.env.development? %>
+
   </body>
 </html>
