--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,17 +3,15 @@
     <title><%= @titulo %> | Loja </title>
   </head>
   <body>
-    <h1><%= @titulo %> | Loja </h1>
+
+    <h1> <%= yield :cabecalho %> | Loja </h1>
 
     <%= render_flash %>
 
-    <ul>
-      <li><%= link_to 'Produtos', produtos_path %></li>
-      <% unless pedido_atual.blank? %>
-        <li><%= link_to 'Veja o seu carrinho', itens_path %></li>
-      <% end %>
-    </ul>
+    <%= render "compartilhados/cabecalho" %>
+
     <%= yield %>
+
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
