Adicionado Ajax para manusear o carrinho

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,13 @@
 <html>
   <head>
     <title><%= @titulo %> | Loja </title>
+
+    <%= javascript_include_tag "jquery",
+      "jquery-ui",
+      "jquery-form",
+      "jrails",
+      "application" %>
+
   </head>
   <body>
 
