--- a/app/views/admin/produtos/new.html.erb
+++ b/app/views/admin/produtos/new.html.erb
@@ -15,6 +15,15 @@
   </p>
 
   <p>
+    Imagem: <br />
+    <%= f.file_field :imagem %>
+    <% if @produto.imagem.file? %>
+      <br/>
+      Imagem Atual: <%= image_tag @produto.imagem.url %>
+    <% end %>
+  </p>
+
+  <p>
     Descrição: <br/>
     <%= f.text_area :descricao %>
   </p>
